[gd_scene load_steps=3 format=2]

[ext_resource path="res://DefaultFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.25098, 0.0862745, 1 )

[node name="TopText" type="GridContainer" parent="."]
margin_right = 1080.0
margin_bottom = 300.0
columns = 2

[node name="StatsLabel" type="RichTextLabel" parent="TopText"]
margin_right = 539.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
text = "empty"

[node name="TimerLabel" type="RichTextLabel" parent="TopText"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
text = "empty"

[node name="Table" type="GridContainer" parent="."]
margin_left = 40.0
margin_top = 300.0
margin_right = 1040.0
margin_bottom = 1900.0
mouse_filter = 2
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 3

[node name="LatestSets" type="HBoxContainer" parent="."]
margin_top = 1940.0
margin_right = 1080.0
margin_bottom = 2180.0

[node name="Buttons" type="HBoxContainer" parent="."]
margin_top = 2200.0
margin_right = 1080.0
margin_bottom = 2400.0

[node name="ShowSetButton" type="Button" parent="Buttons"]
margin_right = 538.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "SHOW SET"

[node name="RestartButton" type="Button" parent="Buttons"]
margin_left = 541.0
margin_right = 1080.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "RESTART"

[node name="EndGameLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -1100.0
margin_right = 500.0
margin_bottom = 1100.0
custom_fonts/normal_font = ExtResource( 1 )
text = "empty"

[connection signal="game_over" from="." to="." method="_on_NormalGame_game_over"]
[connection signal="pressed" from="Buttons/ShowSetButton" to="." method="_on_ShowSetButton_pressed"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
