[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://DefaultFont.tres" type="DynamicFont" id=2]

[node name="NormalGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.25098, 0.0862745, 1 )

[node name="CardGrid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 340.0
margin_right = -40.0
margin_bottom = -240.0
mouse_filter = 2
custom_constants/vseparation = 36
custom_constants/hseparation = 36
columns = 3

[node name="StatsLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_bottom = 300.0
custom_fonts/normal_font = ExtResource( 2 )

[node name="ShowSetButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 500.0
custom_fonts/font = ExtResource( 2 )
text = "SHOW SET"

[node name="RestartButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -200.0
custom_fonts/font = ExtResource( 2 )
text = "RESTART"

[connection signal="pressed" from="ShowSetButton" to="." method="_on_ShowSetButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
